:sparkles: Criando página de postagem

--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
     <title>Tech Bahia - O maior portal de tecnologia do estado da Bahia</title>
 </head>
 <body class='bg'>
-    <header class="cabecalho ">
-        <div class="container">
+    <header>
+        <div class="cabecalho container">
             <img class="img-logo" src="./assets/img/logo_techbahia.png" alt="">
 
             <nav class="menu-nav">
