:sparkles: Criando função de contagem de visualizações

--- a/home.html
+++ b/home.html
@@ -47,8 +47,11 @@
                     </figure>
                     <h3 class="card-titulo-post">TI puxa vagas e tem maior salário em serviços no Brasil, mas Telecom cai</h3>
                     <p class="card-texto"> A Pesquisa Anual de Serviços (PAS) 2021 do IBGE mostrou um total de 1,5 milhão de empresas ativas, com crescimento de 7,9%, frente a 2019 e de 9,2% ante 2020.Essas empresas ocupavam 13,4 milhões de pessoas, recorde da série histórica iniciada em 2007, e pagaram R$ 432,3 bilhões em salários, retiradas e outras remunerações.</p>
-                    <a class="card-continueLendo" href="./posts.html">continue lendo >>></a>
-                    <p class="card-data">23/08/2022</p>
+                    <a class="card-continueLendo card1" href="./posts.html">continue lendo >>></a>
+                    <div class="card-rodape">
+                        <p class="card-data">23/08/2022</p>
+                        <p id="contador1">Visualizações: 0</p>
+                    </div>
                 </div>
         
                 <div class="card comunicacao">
@@ -56,10 +59,13 @@
                         <figcaption class="card-img-texto">COMUNICAÇÕES</figcaption>
                         <img class='card-img' src="/assets/img/comunicaçoes.png" alt="">
                     </figure>
-                    <h2 class="card-titulo-post">Título post 2</h2>
-                    <p class="card-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam omnis fuga eum nesciunt ab minus. Sunt praesentium sit facere, voluptas voluptatem nam delectus fugit, temporibus quae quidem autem saepe assumenda.</p>
-                    <a class="card-continueLendo" href="">continue lendo >>></a>
-                    <p class="card-data">23/08/2022</p>
+                    <h2 class="card-titulo-post">Encontro fomenta inovação na Bahia: comunidade se une para idealização de projetos</h2>
+                    <p class="card-texto">No dia 10 de agosto, um encontro que reuniu mais de 70% de representantes de empresas, startups e instituições residentes no Parque, colocou em foco a integração, participação e a criação de soluções voltadas para o fortalecimento do Parque e sua comunidade, bem como do ecossistema baiano.</p>
+                    <a class="card-continueLendo card2" href="./posts.html">continue lendo >>></a>
+                    <div class="card-rodape">
+                        <p class="card-data">23/08/2022</p>
+                        <p id="contador2">Visualizações: 0</p>
+                    </div>
                 </div>
 
                 <div class="card relacoes">
@@ -67,20 +73,27 @@
                         <figcaption class="card-img-texto">RELAÇÕES</figcaption>
                         <img class='card-img' src="/assets/img/relacoes.jpg" alt="">
                     </figure>
-                    <h2 class="card-titulo-post">Título post 3</h2>
-                    <p class="card-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium, tenetur numquam eaque cupiditate, non saepe placeat atque recusandae impedit similique molestias deleniti quos omnis error voluptatum assumenda accusamus laudantium blanditiis?</p>
-                    <a class="card-continueLendo" href="">continue lendo >>></a>
-                    <p class="card-data">23/08/2022</p>
+                    <h2 class="card-titulo-post">Como alcançar o sucesso através da tecnologia e inovação?</h2>
+                    <p class="card-texto">Na era atual, onde a competitividade no mercado é um desafio constante, a tecnologia e a inovação se tornaram parceiras indispensáveis para impulsionar o sucesso das empresas. A conjunção desses dois elementos possibilita o aprimoramento de processos, a conquista de vantagens estratégicas e o atendimento às expectativas dos clientes, que estão cada vez mais exigentes. </p>
+                    <a class="card-continueLendo card3" href="./posts.html">continue lendo >>></a>
+                    <div class="card-rodape">
+                        <p class="card-data">23/08/2022</p>
+                        <p id="contador3">Visualizações: 0</p>
+                    </div>
                 </div>
                 <div class="card tecnologia">
                     <figure class='card-img-titulo'>
                         <figcaption class="card-img-texto">NA MÍDIA</figcaption>
                         <img class='card-img' src="/assets/img/tecnologia2.jpeg" alt="">
                     </figure>
-                    <h2 class="card-titulo-post">Título post 4</h2>
-                    <p class="card-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis qui ut sit, in error laborum nemo nisi eaque cum! Saepe ullam libero temporibus commodi nulla, aliquam cumque! Quod, voluptate odio!</p>
-                    <a class="card-continueLendo" href="">continue lendo >>></a>
-                    <p class="card-data">23/08/2022</p>
+                    <h2 class="card-titulo-post">Parque Tecnológico da Bahia tem inscrições abertas para programa de residência</h2>
+                    <p class="card-texto">Objetivo é selecionar organizações de base tecnológica que atuam em atividades de pesquisa, desenvolvimento e inovação para instalação no equipamento A Associação de Empresas do Parque Tecnológico.</p>
+                    <a class="card-continueLendo card4" href="./posts.html">continue lendo >>></a>
+                    <div class="card-rodape">
+                        <p class="card-data">23/08/2022</p>
+                        <p id="contador4">Visualizações: 0</p>
+                    </div>
+                    
                 </div>
             </div>
         </section>
@@ -91,5 +104,6 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/65f22fe718.js" crossorigin="anonymous"></script>
+    <script src="./assets/JS/main.js"></script>
 </body>
 </html>
