:phone: Criando responsiviade para a página principal

--- a/home.html
+++ b/home.html
@@ -74,7 +74,7 @@
                         <img class='card-img' src="/assets/img/relacoes.jpg" alt="">
                     </figure>
                     <h2 class="card-titulo-post">Como alcançar o sucesso através da tecnologia e inovação?</h2>
-                    <p class="card-texto">Na era atual, onde a competitividade no mercado é um desafio constante, a tecnologia e a inovação se tornaram parceiras indispensáveis para impulsionar o sucesso das empresas. A conjunção desses dois elementos possibilita o aprimoramento de processos, a conquista de vantagens estratégicas e o atendimento às expectativas dos clientes, que estão cada vez mais exigentes. </p>
+                    <p class="card-texto">Na era atual, a tecnologia e a inovação se tornaram parceiras indispensáveis para impulsionar o sucesso das empresas. A conjunção desses dois elementos possibilita o aprimoramento de processos, a conquista de vantagens estratégicas e o atendimento às expectativas dos clientes, que estão cada vez mais exigentes. </p>
                     <a class="card-continueLendo card3" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
                         <p class="card-data">23/08/2022</p>
