--- a/home.html
+++ b/home.html
@@ -14,10 +14,10 @@
             <img class="img-logo" src="./assets/img/logo_techbahia.png" alt="">
 
             <nav class="menu-nav">
-                <a href="">Todas as categorias</a>
-                <a href="">Comunicação</a>
-                <a href="">Relações</a>
-                <a href="">Tecnologia</a>
+                <a class='btn-todasCategorias' href="">Todas as categorias</a>
+                <a class='btn-tecnologia' href="">Tecnologia</a>
+                <a class='btn-comunicacoes' href="">Comunicações</a>
+                <a class='btn-relacoes' href="">Relações</a>
             </nav>
         </div>
     </header>
@@ -49,12 +49,12 @@
                     <p class="card-texto"> A Pesquisa Anual de Serviços (PAS) 2021 do IBGE mostrou um total de 1,5 milhão de empresas ativas, com crescimento de 7,9%, frente a 2019 e de 9,2% ante 2020.Essas empresas ocupavam 13,4 milhões de pessoas, recorde da série histórica iniciada em 2007, e pagaram R$ 432,3 bilhões em salários, retiradas e outras remunerações.</p>
                     <a class="card-continueLendo card1" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
-                        <p class="card-data">23/08/2022</p>
+                        <p class="card-data">23 de agosto de 2023</p>
                         <p id="contador1">Visualizações: 0</p>
                     </div>
                 </div>
         
-                <div class="card comunicacao">
+                <div class="card comunicacoes">
                     <figure class='card-img-titulo'>
                         <figcaption class="card-img-texto">COMUNICAÇÕES</figcaption>
                         <img class='card-img' src="/assets/img/comunicaçoes.png" alt="">
@@ -63,7 +63,7 @@
                     <p class="card-texto">No dia 10 de agosto, um encontro que reuniu mais de 70% de representantes de empresas, startups e instituições residentes no Parque, colocou em foco a integração, participação e a criação de soluções voltadas para o fortalecimento do Parque e sua comunidade, bem como do ecossistema baiano.</p>
                     <a class="card-continueLendo card2" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
-                        <p class="card-data">23/08/2022</p>
+                        <p class="card-data">27 de setembro de 2023</p>
                         <p id="contador2">Visualizações: 0</p>
                     </div>
                 </div>
@@ -77,20 +77,20 @@
                     <p class="card-texto">Na era atual, a tecnologia e a inovação se tornaram parceiras indispensáveis para impulsionar o sucesso das empresas. A conjunção desses dois elementos possibilita o aprimoramento de processos, a conquista de vantagens estratégicas e o atendimento às expectativas dos clientes, que estão cada vez mais exigentes. </p>
                     <a class="card-continueLendo card3" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
-                        <p class="card-data">23/08/2022</p>
+                        <p class="card-data">27 de agosto de 2023</p>
                         <p id="contador3">Visualizações: 0</p>
                     </div>
                 </div>
                 <div class="card tecnologia">
                     <figure class='card-img-titulo'>
-                        <figcaption class="card-img-texto">NA MÍDIA</figcaption>
+                        <figcaption class="card-img-texto">TECNOLOGIA</figcaption>
                         <img class='card-img' src="/assets/img/tecnologia2.jpeg" alt="">
                     </figure>
                     <h2 class="card-titulo-post">Parque Tecnológico da Bahia tem inscrições abertas para programa de residência</h2>
                     <p class="card-texto">Objetivo é selecionar organizações de base tecnológica que atuam em atividades de pesquisa, desenvolvimento e inovação para instalação no equipamento A Associação de Empresas do Parque Tecnológico.</p>
                     <a class="card-continueLendo card4" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
-                        <p class="card-data">23/08/2022</p>
+                        <p class="card-data">1 de outrubro de 2023</p>
                         <p id="contador4">Visualizações: 0</p>
                     </div>
                     
