:sparkles: Alterando posições das funções no JS

--- a/home.html
+++ b/home.html
@@ -91,7 +91,7 @@
                     <p class="card-texto">Objetivo é selecionar organizações de base tecnológica que atuam em atividades de pesquisa, desenvolvimento e inovação para instalação no equipamento A Associação de Empresas do Parque Tecnológico.</p>
                     <a class="card-continueLendo card4" href="./posts.html">continue lendo >>></a>
                     <div class="card-rodape">
-                        <p class="card-data">1 de outrubro de 2023</p>
+                        <p class="card-data">28 de setembro de 2023</p>
                         <p id="contador4">Visualizações: 0</p>
                     </div>
                 </div>
